--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.51"
+    "vuepress": "2.0.0-beta.51"
   },
   "dependencies": {
-    "@vuepress/cli": "^2.0.0-beta.51"
+    "@vuepress/cli": "2.0.0-beta.51"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
