--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "devDependencies": {
+    "@vuepress/client": "2.0.0-beta.51",
+    "@vuepress/plugin-docsearch": "^2.0.0-beta.51",
+    "@vuepress/plugin-pwa": "^2.0.0-beta.51",
+    "@vuepress/plugin-pwa-popup": "^2.0.0-beta.51",
+    "@vuepress/plugin-register-components": "^2.0.0-beta.51",
+    "vue": "^3.2.29",
     "vuepress": "2.0.0-beta.51"
   },
   "dependencies": {
-    "@vuepress/cli": "2.0.0-beta.51"
+    "@vuepress/cli": "2.0.0-beta.51",
+    "markdown-it": "^13.0.1"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "docs:clean-dev": "vuepress dev docs --clean-cache"
   },
   "type": "module"
 }
