--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -18,29 +18,26 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           # 选择要使用的 node 版本
           node-version: '16'
 
       # 缓存 node_modules
-      - name: Cache node modules
-        id: cache-npm
+      - name: Cache dependencies
         uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
+        id: yarn-cache
         with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+            ${{ runner.os }}-yarn-
 
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: Install dependencies
-        run: npm install
+      # 如果缓存没有命中，安装依赖
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn --frozen-lockfile
 
       # 运行构建脚本
       - name: Build VuePress site
